--- a/css/style.css
+++ b/css/style.css
@@ -33,12 +33,39 @@ body {
   font-family: sans-serif;
   background-color: #26bdd2;
   padding: 4em;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
 }
 
 .wrap {
-  width: 200px;
+  width: 100%;
+  height: 5em;
+  padding-top: .5em;
+  padding-left: 1em;
   margin: auto;
   z-index: 1;
+  background-color: #fcfcfc;
+}
+
+.logo {
+  width: 3em;
+  height: auto;
+  position: absolute;
+  margin: .5em .6em;
+  pointer-events: none;
+}
+
+.sticker {
+  width: 4em;
+  height: 4em;
+  position: absolute;
+  /* background: url(https://dl.dropbox.com/u/1143870/i/sticker.png) top center no-repeat; */
+  -webkit-animation: spin 10s linear infinite;
+          animation: spin 10s linear infinite;
+  /*Set our animation play state to paused initially */
+  -webkit-animation-play-state: paused;
+          animation-play-state: paused;
 }
 
 /*# sourceMappingURL=style.css.map */
