--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -22,13 +22,38 @@ body{
   font-family: sans-serif;
 	background-color: $blue;
 	padding: 4em;
+	overflow: hidden;
+	padding: 0;
+	margin: 0;
   }
 
 .wrap {
-	width:200px;
-	margin:auto;
-	z-index:1;
+	width: 100%;
+	height: 5em;;
+	padding-top: .5em;
+	padding-left: 1em;
+	margin: auto;
+	z-index: 1;
+	background-color: $white;
 	}
+
+.logo {
+  width: 3em;
+	height: auto;
+  position:absolute;
+  margin: .5em .6em;
+  pointer-events: none;
+}
+
+.sticker {
+  width: 4em;
+  height: 4em;
+  position: absolute;
+  /* background: url(https://dl.dropbox.com/u/1143870/i/sticker.png) top center no-repeat; */
+  animation: spin 10s linear infinite;
+  /*Set our animation play state to paused initially */
+  animation-play-state: paused;
+}
 
 
 @media only screen and (min-width: 60em){
